--- a/resources/assets/sass/_equstar.scss
+++ b/resources/assets/sass/_equstar.scss
@@ -1,5 +1,9 @@
 @import "equstar_variables";
 
+body {
+	min-height: 100%;
+}
+
 .menu {
 	.navbar-header {
 		.navbar-brand {
@@ -108,4 +112,80 @@
 			margin: 100px 0 30px;
 		}
 	}
+}
+
+.shopping-cart {     
+	 .cart-overlay {
+	 	opacity: 0.3;
+    content: "";
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 9990;
+    width: 100vw;
+    height: 100vh;
+    background: #505050;
+    transition: opacity .75s;
+
+    &.hidden {
+    	display: none;
+    }
+
+    &.show {
+    	display: block;
+    }
+	 }
+
+	 .cart-container {
+	 		position: fixed;
+	    top: 0;
+	    right: 0;
+	    bottom: 0;
+	    z-index: 9991;
+	    width: 100%;
+	    max-width: 30%;
+	    overflow-x: hidden;
+	    background: #fff;
+	 		transition: transform .5s;
+	 		transform: translateX(100%);
+
+	 		&.open {
+	 			transform: translateX(0)
+	 		}
+
+			.cart-header {
+				text-align: center;
+	    	border-bottom: solid 1px #ddd;
+
+	    	.close {
+	    		display: inline-block;
+		    	float: left;
+		    	margin-top: 10px;
+		    	font-size: 3rem;
+		    	font-weight: normal;
+	    	}
+
+	    	.title {
+	    		display: inline-block;
+		    	font-size: 2.2rem;
+		    	text-transform: uppercase;
+		    	font-weight: bold;
+		    	margin: 15px 0;
+		    }
+		 }
+
+		 .cart-empty {
+		 	display: block;
+	    text-align: center;
+	    margin: 50px 0;
+	    font-size: 2rem;
+		 }
+
+		 .btn-shop-now {
+		 	display: block;
+	    margin: 0 20%;
+	    text-transform: uppercase;
+	    font-weight: bold;
+		 }
+	 }
 }
